--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -22,10 +22,10 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
