--- a/index.html
+++ b/index.html
@@ -69,33 +69,12 @@
 
 
     <div class="container-fluid">
-        <!--Navbar-->
-        <div class="row" style="margin-bottom: 0px;">
-                <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
-                        </li>    
-                      </ul>
-                    </div>  
-                  </nav>
-            </div>
 
             <!--NAvbar 2-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="row" style="margin-bottom: 0px;">
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">Etusivu</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -110,13 +89,11 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">Pricing</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
                   </ul>
                 </div>
               </div>
             </nav>
+          </div>
 
 
 
