--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
             <div class="row" style="margin-bottom: 0px;">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">Etusivu</a>
+                <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
+                      <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
                     </li>
                   </ul>
                 </div>
