--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -12,29 +12,30 @@
   
   
   <!--Navbar-->
-    <div class="container-fluid">
-
-        <div class="row" style="margin-bottom: 0px;">
-                <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/index.html" style="color:yellow">Etusivu</a>
-                    
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
-                        </li>    
-                      </ul>
-                    </div>  
-                  </nav>
-            </div>
-    </div>  
-
-
+  <div class="row" style="margin-bottom: 0px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="https://anttiannala.github.io/Project/index.html" style="color:yellow">Etusivu</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
+            </li>    
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+   
   
        <div class="image" >
         
