--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -21,28 +21,31 @@ a:visited{
 
 <body>
     <div class="container-fluid">
-        <!--Navbar-->
-        <div class="row" style="margin-bottom: 10px;">
-                <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
-                        </li> 
-                      </ul>
-                    </div>  
-                  </nav>
+
+        <!--NAvbar 2-->
+        <div class="row" style="margin-bottom: 0px;">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
+                </li>
+              </ul>
             </div>
+          </div>
+        </nav>
+      </div>
            
             <h1 style="text-align: center; font-weight: bold;">AutoKorjaamo. Hinnasto</h1>
             
@@ -75,7 +78,7 @@ a:visited{
                     <td>35€</td>
                   </tr>
                   <th scope="row">4</th>
-                    <td>Ohjauskulmien tarkistus ja saatö</td>
+                    <td>Ohjauskulmien tarkistus ja säättö</td>
                     <td>Ohjauskulmien tarkistus ja säätö pitää sisällään perussäädön. Lisätyön veloitamme erikseen, jos pultit on esimerkiksi jumitttautunut ja ne täytyy työstää auki.</td>
                     <td>60€</td>
                   </tr>
@@ -88,6 +91,11 @@ a:visited{
                     <td>Vannetyö + tasapainoitus + allelaitto</td>
                     <td>-</td>
                     <td>80€</td>
+                  </tr>
+                  <th scope="row">7</th>
+                    <td>Jakohihananvaihto</td>
+                    <td>-</td>
+                    <td>500€</td>
                   </tr>
                 </tbody>
               </table>
