--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -11,29 +11,32 @@
 
    <header style="background-color: gray;" width="100%" height="10px"></header>
    <!--navbar-->
-    <div class="container-fluid">
+   <div class="container-fluid">
 
-        <div class="row" style="margin-bottom: 5px;">
-                <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
-                        </li>    
-                      </ul>
-                    </div>  
-                  </nav>
-            </div>
+    <!--NAvbar 2-->
+    <div class="row" style="margin-bottom: 0px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
             <br>
             <div class="container-fluid" style="background-color:grey;" >    
               <div class="container" style="background-color:white;">
@@ -100,7 +103,7 @@
               <label for="floatingTextarea">Auton rekisteritunnus</label>
             </div>
             <br>
-            <h5><strong>Paljonko on autolla ajettu</strong></h5>
+            <h5><strong>Auton mittarilukema</strong></h5>
             <input type="text" id="Ajomäärä" name="Ajomäärä" value="Paljonko autolla on ajettu" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
             <br>
             <h5>Kirjoita Tiedot</h5>
@@ -120,6 +123,7 @@
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
                 <label for="floatingTextarea">Puhelinnumero</label>
               </div>
+
             <div class="d-grid gap-2">
               <button class="btn btn-primary" type="button" style="background-color: yellow; color: #000; font-weight: bolder;">Varaa Huoltoaika</button>
             </div>
