--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
+              <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
@@ -37,11 +37,6 @@
       </div>
     </nav>
   </div>
-            <br>
-            <div class="container-fluid" style="background-color:grey;" >    
-              <div class="container" style="background-color:white;">
-              </div>
-            </div>
         </div>   
         <div class="container-md">
           <center>
