--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>Varaa palvelu</title>
-    <author>Antti Annala, Eetu Lehmusvuori, Mikael Fabritius</author>
+    <meta name="author" content="Antti Annala, Eetu Lehmusvuori, Mikael Fabritius">
 </head>
 <body>
 
-   <header style="background-color: gray;" width="100%" height="10px"></header>
-   <!--navbar-->
+   <header style="background-color: gray;"" width="100%" height="10px"></header>
+   
    <div class="container-fluid">
 
     <!--NAvbar 2-->
