--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Antti Annala, Eetu Lehmusvuori, Mikael Fabritius">
     <meta name="description" content="AutoKorjaamo, Auto huolto, Tietoa meistä, Autokorjaamo tietoa meistä">
     <title>Tietoa-meistä/esittely</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/aboutus.css">
+
     <style> iframe {width:100%;height:100%;max-width: 820px;}</style>
 </head>
 <body>
